--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    
+}
 header {
     max-width:1000px;
 }
