--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     font-family:Verdana, Geneva, Tahoma, sans-serif;
-    
+
 }
 header {
     max-width:1000px;
@@ -21,4 +21,8 @@ nav {
     display: flex;
     gap:20px;
     align-items: center;
+}
+
+.navlink {
+    text-decoration: none;
 }
