--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 }
 
 body {
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-family:Verdana, sans-serif;
+    font-size:17px;
 
 }
 header {
@@ -25,4 +26,14 @@ nav {
 
 .navlink {
     text-decoration: none;
+    color:black;
+}
+
+.hello-btn {
+	font-size:1.25rem;
+	background-color:#fff0;
+	border:3px solid #068FFF;
+	color:#068FFF;
+	padding:0.4rem 1rem;
+	border-radius:50px;
 }
