--- a/style.css
+++ b/style.css
@@ -10,14 +10,14 @@ body {
 
 }
 header {
-    max-width:1000px;
     margin: 0 auto;
 }
 
 nav {
     display:flex;
     justify-content: space-around;
-    padding:20px 0;
+    align-items: center;
+    padding:2em 0;
 }
 .navitems {
     display: flex;
@@ -44,4 +44,19 @@ nav {
 	color:white;
 	border-radius:5px;
 	transition:all 2s;
+}
+
+.container {
+    padding-top:2em;
+    width:1000px;
+    margin:0 auto;
+}
+.intro h1 {
+    font-size:3em;
+    text-align:center;
+}
+.intro p {
+    padding-top:1em;
+    font-size:1.5em;
+    text-align:center
 }
