--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@ nav {
     max-width:100%;
     margin:0 auto;
 }
+.intro {
+
+    text-align:center;
+}
 .intro h1 {
     font-size:3em;
     text-align:center;
@@ -59,4 +63,10 @@ nav {
     padding-top:1em;
     font-size:1.5em;
     text-align:center
+}
+
+#tyrel {
+    margin-top: 3em;
+    margin-bottom: 2em;
+    border-radius: 50%;
 }
