--- a/style.css
+++ b/style.css
@@ -144,3 +144,41 @@ left:3px;
 .about-info p{
 	font-size:1.25rem;
 }
+
+.skills-container {
+	display:flex;
+	justify-content: center;
+	width:100%;
+}
+.skills {
+	position:relative;
+	top:-7rem;
+	z-index:1;
+	width:400px;
+	border:1px solid #f2f2f2;
+	border-radius:10px;
+	padding:3em;
+	background-color:white;
+	text-align:center;
+}
+
+.skill-mhead{
+	padding-bottom:1.25rem;
+}
+.skills section ul {
+	list-style-type:none;
+}
+
+.skills section ul li {
+	padding:.7rem 0;
+}
+
+.skill-head {
+	padding-bottom:2rem;
+	text-align:center;
+}
+
+.skill-info {
+	padding-bottom:3rem;
+	text-align:center;
+}
