--- a/style.css
+++ b/style.css
@@ -203,3 +203,10 @@ footer ul li a {
 	text-decoration: none;
 	color:white;
 }
+
+@media only screen and (max-width: 700px){
+    .skills-container{
+        flex-direction:column;
+        align-items: center;
+    }
+}
